adicionda link para projeto 12

--- a/12-key_sequence_detection/index.html
+++ b/12-key_sequence_detection/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Key Detection</title>
+  <title>Detector de tecla</title>
   <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
 </head>
 <style>
