projeto slide on scroll

--- a/12-key_sequence_detection/index.html
+++ b/12-key_sequence_detection/index.html
@@ -17,12 +17,9 @@
     p {
       max-width: 80vw;
     }
-    code {
-      width: 200px;
-    }
   }
 </style>
-<body style = "background-color:#ebe9e9";>
+<body>
   <p style="font-weight: bold;">Este projeto visa exercitar a manipulação de array e string, digite o código "bryan" e uma função cornify será acionada.</p>
   <input></input>
   <p style="font-weight: bold;">Código JavaScript:</p>
